Format index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180359974-1"></script>
-    <script src="src/common/scripts/analytics.js"></script>
+    <script src="assets/js/analytics.js"></script>
 
 </head>
 <body class="text-white font-mono flex flex-col min-h-screen">
